# photobooth

./: .gitignore  .sops.yaml  Makefile  Pipfile  README.md  ansible.cfg  init  print_all.sh  pyproject.toml  setup.py
photobooth/: capture.py  capture_one.py  machine.py  process.py  raspberry_pi.py  remote_printer.py  simulation.py
photobooth/app/: camera.py  capture.py  config.py  entities.py  image_filters.py  image_helpers.py  machine.py  printer.py  process.py  templates.py
photobooth/app/configs/: config_default.yml  default.yml  presets.yml  temp.yml
playbooks/: deploy.ubuntu.yml  deploy.yml  dump_photos.yml  inventory.yml  setup.yml
playbooks/group_vars/all/: config_data.yml  config_secrets.sops.yml
playbooks/templates/: config.yml.j2  netplan.yml.j2  photobooth-capture.service.j2
scripts/: dump-photos-raspberry-pi.sh  install-services.sh  photobooth-capture.service  raspberrypi-config.yml  restart-service-raspberry-pi.sh  rsync-raspberry-pi.sh  service-logs-raspberry-pi.sh  test-capture-raspberry-pi.sh
